Add Term resource (#112)
* Stashing files

* Add term REST resource to return term meta data

* Update term id check to look for numeric

* Update swagger docs
